Implement files, input. Stub audio

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,5 +3,12 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
       version="3.0">
-  <!-- TODO: configure web application -->
+  <servlet>
+    <servlet-name>filesystem</servlet-name>
+    <servlet-class>org.teavm.libgdx.servlet.LibGDXFilesServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>filesystem</servlet-name>
+    <url-pattern>/filesystem.json</url-pattern>
+  </servlet-mapping>
 </web-app>
