--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.7</java.version>
     <teavm.version>0.3.0-SNAPSHOT</teavm.version>
+    <jackson.version>2.5.0</jackson.version>
     <gdx.version>1.5.3</gdx.version>
   </properties>
 
@@ -51,6 +52,16 @@
       <artifactId>gdx-controllers</artifactId>
       <version>${gdx.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.badlogicgames.gdx</groupId>
+      <artifactId>gdx-backend-gwt</artifactId>
+      <version>${gdx.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.badlogicgames.gdx</groupId>
+      <artifactId>gdx-controllers-gwt</artifactId>
+      <version>${gdx.version}</version>
+    </dependency>
 
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -61,17 +72,17 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
-      <version>2.5.0</version>
+      <version>${jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
-      <version>2.5.0</version>
+      <version>${jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.5.0</version>
+      <version>${jackson.version}</version>
     </dependency>
   </dependencies>
 
@@ -113,6 +124,8 @@
               <runtime>SEPARATE</runtime>
               <minifying>false</minifying>
               <debugInformationGenerated>true</debugInformationGenerated>
+              <sourceMapsGenerated>true</sourceMapsGenerated>
+              <sourceFilesCopied>true</sourceFilesCopied>
             </configuration>
           </execution>
         </executions>
