--- a/pom.xml
+++ b/pom.xml
@@ -10,15 +10,15 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.7</java.version>
-    <teavm.version>0.3.0-SNAPSHOT</teavm.version>
+    <teavm.version>0.3.1</teavm.version>
     <jackson.version>2.5.0</jackson.version>
     <gdx.version>1.5.3</gdx.version>
   </properties>
 
   <modules>
-    <module>teavm-libgdx-core</module>
-    <module>teavm-libgdx-controllers</module>
-    <module>teavm-libgdx-demos</module>
+    <module>core</module>
+    <module>controllers</module>
+    <module>demos</module>
   </modules>
 
   <dependencyManagement>
