--- a/core/pom.xml
+++ b/core/pom.xml
@@ -22,11 +22,7 @@
     </dependency>
     <dependency>
       <groupId>org.teavm</groupId>
-      <artifactId>teavm-jso</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.teavm</groupId>
-      <artifactId>teavm-dom</artifactId>
+      <artifactId>teavm-jso-apis</artifactId>
     </dependency>
     <dependency>
       <groupId>com.badlogicgames.gdx</groupId>
