--- a/demos/invaders/webapp/pom.xml
+++ b/demos/invaders/webapp/pom.xml
@@ -53,7 +53,7 @@
             <id>web-client</id>
             <phase>prepare-package</phase>
             <goals>
-              <goal>build-javascript</goal>
+              <goal>compile</goal>
             </goals>
             <configuration>
               <targetDirectory>${project.build.directory}/generated/teavm</targetDirectory>
