--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,12 @@
       </dependency>
       <dependency>
         <groupId>org.teavm</groupId>
-        <artifactId>teavm-dom</artifactId>
+        <artifactId>teavm-jso-apis</artifactId>
+        <version>${teavm.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.teavm</groupId>
+        <artifactId>teavm-jso-impl</artifactId>
         <version>${teavm.version}</version>
       </dependency>
 
